fix: created rule return uuid
